tests/negative/CompileBlocks/WrongLocationCompileBlock.mjuvix
module WrongLocationCompileBlock;
import Sample.Definitions;
open Sample.Definitions;

compile A {
 ghc -> "Bool";
};

end;
